--- a/index.css
+++ b/index.css
@@ -322,37 +322,46 @@ div#loader .blue {
 }
 
 .deck:hover .card:nth-child(1) {
-    transform: rotate(-40deg);
+    transform: rotate(-25deg);
     transition: 1s;
 }
 
 .deck:hover .card:nth-child(1):hover {
-    transform: scale(1.2, 1.2) rotate(-40deg);
+    transform: scale(1.2, 1.2) rotate(-25deg);
 }
 
 .deck:hover .card:nth-child(2) {
-    transform: rotate(-30deg);
+    transform: rotate(-15deg);
     transition: 1s;
 }
 
 .deck:hover .card:nth-child(2):hover {
-    transform: scale(1.2, 1.2) rotate(-30deg);
+    transform: scale(1.2, 1.2) rotate(-15deg);
 }
 
 .deck:hover .card:nth-child(3) {
-    transform: rotate(-20deg);
+    transform: rotate(-5deg);
     transition: 1s;
 }
 
 .deck:hover .card:nth-child(3):hover {
-    transform: scale(1.2, 1.2) rotate(-20deg);
+    transform: scale(1.2, 1.2) rotate(-5deg);
 }
 
 .deck:hover .card:nth-child(4) {
-    transform: rotate(-10deg);
+    transform: rotate(5deg);
     transition: 1s;
 }
 
 .deck:hover .card:nth-child(4):hover {
-    transform: scale(1.2, 1.2) rotate(-10deg);
+    transform: scale(1.2, 1.2) rotate(5deg);
+}
+
+.deck:hover .card:nth-child(5) {
+    transform: rotate(15deg);
+    transition: 1s;
+}
+
+.deck:hover .card:nth-child(5):hover {
+    transform: scale(1.2, 1.2) rotate(15deg);
 }
